# python-starter

./: .gitignore  README.md  cli.py  main.py  pyproject.toml
cmd/: serve.py
tests/: test_main.py
